sys/prebuilt-bindings/geos_3.11.rs

extern "C" {
    #[doc = " \\see GEOSMakeValidWithParams"]
    pub fn GEOSMakeValidWithParams_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        makeValidParams: *const GEOSMakeValidParams,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSRemoveRepeatedPoints"]
    pub fn GEOSRemoveRepeatedPoints_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        tolerance: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeomType"]
    pub fn GEOSGeomType_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry)
        -> *mut libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSGeomTypeId"]
    pub fn GEOSGeomTypeId_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGetSRID"]
    pub fn GEOSGetSRID_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSSetSRID"]
    pub fn GEOSSetSRID_r(handle: GEOSContextHandle_t, g: *mut GEOSGeometry, SRID: libc::c_int);
}
extern "C" {
    #[doc = " \\see GEOSGeom_getUserData"]
    pub fn GEOSGeom_getUserData_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut libc::c_void;
}
extern "C" {
    #[doc = " \\see GEOSGeom_setUserData"]
    pub fn GEOSGeom_setUserData_r(
        handle: GEOSContextHandle_t,
        g: *mut GEOSGeometry,
        userData: *mut libc::c_void,
    );
}
extern "C" {
    #[doc = " \\see GEOSGetNumGeometries"]
    pub fn GEOSGetNumGeometries_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGetGeometryN"]
    pub fn GEOSGetGeometryN_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        n: libc::c_int,
    ) -> *const GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSNormalize"]
    pub fn GEOSNormalize_r(handle: GEOSContextHandle_t, g: *mut GEOSGeometry) -> libc::c_int;
}
#[doc = " The output is always valid. Collapsed geometry elements (including both polygons and lines) are removed."]
pub const GEOSPrecisionRules_GEOS_PREC_VALID_OUTPUT: GEOSPrecisionRules = 0;
#[doc = " Precision reduction is performed pointwise. Output geometry may be invalid due to collapse or self-intersection. (This might be better called \"GEOS_PREC_POINTWISE\" - the current name is historical.)"]
pub const GEOSPrecisionRules_GEOS_PREC_NO_TOPO: GEOSPrecisionRules = 1;
#[doc = " Like the default mode, except that collapsed linear geometry elements are preserved. Collapsed polygonal input elements are removed."]
pub const GEOSPrecisionRules_GEOS_PREC_KEEP_COLLAPSED: GEOSPrecisionRules = 2;
#[doc = " Controls the behavior of GEOSGeom_setPrecision()"]
#[doc = " when altering the precision of a geometry."]
pub type GEOSPrecisionRules = libc::c_uint;
extern "C" {
    #[doc = " \\see GEOSGeom_setPrecision"]
    pub fn GEOSGeom_setPrecision_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        gridSize: f64,
        flags: libc::c_int,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_getPrecision"]
    pub fn GEOSGeom_getPrecision_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> f64;
}
extern "C" {
    #[doc = " \\see GEOSGetNumInteriorRings"]
    pub fn GEOSGetNumInteriorRings_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGeomGetNumPoints"]
    pub fn GEOSGeomGetNumPoints_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGeomGetX"]
    pub fn GEOSGeomGetX_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        x: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGeomGetY"]
    pub fn GEOSGeomGetY_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        y: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGeomGetZ"]
    pub fn GEOSGeomGetZ_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        z: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGetInteriorRingN"]
    pub fn GEOSGetInteriorRingN_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        n: libc::c_int,
    ) -> *const GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGetExteriorRing"]
    pub fn GEOSGetExteriorRing_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *const GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGetNumCoordinates"]
    pub fn GEOSGetNumCoordinates_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGeom_getCoordSeq"]
    pub fn GEOSGeom_getCoordSeq_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *const GEOSCoordSequence;
}
extern "C" {
    #[doc = " \\see GEOSGeom_getDimensions"]
    pub fn GEOSGeom_getDimensions_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGeom_getCoordinateDimension"]
    pub fn GEOSGeom_getCoordinateDimension_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGeom_getXMin"]
    pub fn GEOSGeom_getXMin_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        value: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGeom_getYMin"]
    pub fn GEOSGeom_getYMin_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        value: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGeom_getXMax"]
    pub fn GEOSGeom_getXMax_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        value: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGeom_getYMax"]
    pub fn GEOSGeom_getYMax_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        value: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGeom_getExtent"]
    pub fn GEOSGeom_getExtent_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        xmin: *mut f64,
        ymin: *mut f64,
        xmax: *mut f64,
        ymax: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGeomGetPointN"]
    pub fn GEOSGeomGetPointN_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        n: libc::c_int,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeomGetStartPoint"]
    pub fn GEOSGeomGetStartPoint_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeomGetEndPoint"]
    pub fn GEOSGeomGetEndPoint_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSArea"]
    pub fn GEOSArea_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        area: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSLength"]
    pub fn GEOSLength_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        length: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSDistance"]
    pub fn GEOSDistance_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSDistanceWithin"]
    pub fn GEOSDistanceWithin_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: f64,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSDistanceIndexed"]
    pub fn GEOSDistanceIndexed_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSHausdorffDistance"]
    pub fn GEOSHausdorffDistance_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSHausdorffDistanceDensify"]
    pub fn GEOSHausdorffDistanceDensify_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        densifyFrac: f64,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSFrechetDistance"]
    pub fn GEOSFrechetDistance_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSFrechetDistanceDensify"]
    pub fn GEOSFrechetDistanceDensify_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        densifyFrac: f64,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSHilbertCode"]
    pub fn GEOSHilbertCode_r(
        handle: GEOSContextHandle_t,
        geom: *const GEOSGeometry,
        extent: *const GEOSGeometry,
        level: libc::c_uint,
        code: *mut libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSGeomGetLength"]
    pub fn GEOSGeomGetLength_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        length: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSNearestPoints"]
    pub fn GEOSNearestPoints_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    #[doc = " \\see GEOSGeom_transformXY"]
    pub fn GEOSGeom_transformXY_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        callback: GEOSTransformXYCallback,
        userdata: *mut libc::c_void,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSOrientationIndex"]
    pub fn GEOSOrientationIndex_r(
        handle: GEOSContextHandle_t,
        Ax: f64,
        Ay: f64,
        Bx: f64,
        By: f64,
        Px: f64,
        Py: f64,
    ) -> libc::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSWKTReader_t {
    _unused: [u8; 0],
}
#[doc = " Reader object to read Well-Known Text (WKT) format and construct Geometry."]
#[doc = " \\see GEOSWKTReader_create"]
#[doc = " \\see GEOSWKTReader_create_r"]
pub type GEOSWKTReader = GEOSWKTReader_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSWKTWriter_t {
    _unused: [u8; 0],
}
#[doc = " Writer object to turn Geometry into Well-Known Text (WKT)."]
#[doc = " \\see GEOSWKTWriter_create"]
#[doc = " \\see GEOSWKTWriter_create_r"]
pub type GEOSWKTWriter = GEOSWKTWriter_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSWKBReader_t {
    _unused: [u8; 0],
}
#[doc = " Reader object to read Well-Known Binary (WKB) format and construct Geometry."]
#[doc = " \\see GEOSWKBReader_create"]
#[doc = " \\see GEOSWKBReader_create_r"]
pub type GEOSWKBReader = GEOSWKBReader_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSWKBWriter_t {
    _unused: [u8; 0],
}
#[doc = " Writer object to turn Geometry into Well-Known Binary (WKB)."]
#[doc = " \\see GEOSWKBWriter_create"]
#[doc = " \\see GEOSWKBWriter_create_r"]
pub type GEOSWKBWriter = GEOSWKBWriter_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSGeoJSONReader_t {
    _unused: [u8; 0],
}
#[doc = " Reader object to read GeoJSON format and construct a Geometry."]
#[doc = " \\see GEOSGeoJSONReader_create"]
#[doc = " \\see GEOSGeoJSONReader_create_r"]
pub type GEOSGeoJSONReader = GEOSGeoJSONReader_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSGeoJSONWriter_t {
    _unused: [u8; 0],
}
